@@ -14,6 +14,8 @@ Verilator 4.225 devel
 **Minor:**
 
 * Fix incorrect bit op tree optimization (#3470). [algrobman]
+* Fix table misoptimizing away display (#3488). [Stefan Post]
+
 
 Verilator 4.224 2022-06-19
 ==========================
